# pip-mark-installed

./: LICENSE.md  README.md  pip-mark-installed.py  pyproject.toml
