[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pip-mark-installed"
version = "0.0.1"
description = "Tool to mark packages as installed in pip without actually installing them."
authors = [
    {name = "Jan Lebert", email = "mail@janlebert.com"}
]
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Home = "https://github.com/sitic/pip-mark-installed"

[project.scripts]
pip-mark-installed = "pip_mark_installed:main"

[tool.hatch.build.targets.wheel.force-include]
"pip-mark-installed.py" = "pip_mark_installed.py"
